1. Usage of record formatting attributes was restored during record serialization. 2. Export uses JsonGenerator to produce JSON output.